# sunfounder-imu-python

./: README.md  pyproject.toml
docs/datasheets/: 10 Axis IMU datasheet cn.md  10 Axis IMU datasheet en.md
examples/: find_sensors.py  full_test.py  full_test_gy87.py  qmc6310_calibrate.py  qmc6310_test.py  read_all_data.py  sh3001_calibrate.py  sh3001_example.py  spl06_001_example.py
sunfounder_imu/: __init__.py  _base.py  _config.py  _i2c.py  _logger.py  _utils.py  _version.py  calibrate.py  constants.py  data_type.py  imu.py  qmc6310.py  sh3001.py  spl06_001.py
sunfounder_imu/cli/: __init__.py  calibrate.py
sunfounder_imu/sensors/: __init__.py  accel_gyro_sensor.py  baro_sensor.py  ellipsoid_calibrator.py  linear_calibrator.py  mag_sensor.py  qmc6309.py  qmc6310.py  qmi8658b.py  sh3001.py  spl06_001.py
test/: qmc6310_calibrate.py  qmc6310_test.py  qmi8658b.py  sh3001_example.py
