
[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sunfounder-imu"
authors = [
  { name="sunfounder", email="service@sunfounder.com" },
]
description = "SunFounder IMU Python library for Raspberry Pi"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
keywords = ["sunfounder", "imu", "qmc6310", "accel", "gyro"]
dynamic = ["version"]

dependencies = [
]

[project.urls]
Repository = "https://github.com/sunfounder/sunfounder-imu-python"
Issues = "https://github.com/sunfounder/sunfounder-imu-python/issues"

[tool.setuptools.packages.find]
include = ["sunfounder_imu*"]

[tool.setuptools.dynamic]
version = {attr = "sunfounder_imu._version.__version__"}

[project.scripts]
sunfounder-imu = "sunfounder_imu.cli.__init__:main"
